fixed menu spacing

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -168,11 +168,11 @@ span.type::after {
 
 .hamburger-button span:nth-child(2),
 .hamburger-button span:nth-child(3) {
-	top: 13px;
+	top: 10px;
 }
 
 .hamburger-button span:nth-child(4) {
-	top: 26px;
+	top: 20px;
 }
 
 .hamburger-button.active span {
@@ -221,11 +221,11 @@ span.type::after {
 
 .hamburger-button2 span:nth-child(2),
 .hamburger-button2 span:nth-child(3) {
-	top: 13px;
+	top: 10px;
 }
 
 .hamburger-button2 span:nth-child(4) {
-	top: 26px;
+	top: 20px;
 }
 
 .hamburger-button2.active span {
